force-app/main/default/objects/ALK_Questionary_Answer__c/ALK_Questionary_Answer__c.object-meta.xml
<CustomObject>
    <label>Respuesta de Cuestionario</label>
    <nameField>
        <displayFormat>RC-{000000}</displayFormat>
        <label>Número de Respuesta de Cuestionario</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Respuestas de Cuestionarios</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>