force-app/main/default/objects/ALK_Questionary_Answer__c/fields/ALK_Air_Voltage_Corresponds_Instalation__c.field-meta.xml
<CustomField>
    <fullName>ALK_Air_Voltage_Corresponds_Instalation__c</fullName>
    <formula>TEXT ( ALK_Work_Order__r.ALK_Air_Voltage_Corresponds_Instalation__c )</formula>
    <label>Voltaje Aire corresponde de instalación</label>
    <type>Text</type>
</CustomField>