force-app/main/default/objects/ALK_Questionary_Answer__c/fields/ALK_All_Accessories__c.field-meta.xml
<CustomField>
    <fullName>ALK_All_Accessories__c</fullName>
    <formula>TEXT( ALK_Work_Order__r.ALK_All_Accessories__c )</formula>
    <label>Se entregan con accesorios completos</label>
    <type>Text</type>
</CustomField>