force-app/main/default/objects/ALK_Questionary_Answer__c/fields/ALK_All_Furniture_Pieces__c.field-meta.xml
<CustomField>
    <fullName>ALK_All_Furniture_Pieces__c</fullName>
    <formula>TEXT ( ALK_Work_Order__r.ALK_All_Furniture_Pieces__c )</formula>
    <label>Piezas del mueble completas</label>
    <type>Text</type>
</CustomField>