force-app/main/default/objects/ALK_Questionary_Answer__c/fields/ALK_Basic_Training__c.field-meta.xml
<CustomField>
    <fullName>ALK_Basic_Training__c</fullName>
    <formula>TEXT ( ALK_Work_Order__r.ALK_Basic_Training__c )</formula>
    <label>Se brinda capacitación de uso básico</label>
    <type>Text</type>
</CustomField>