force-app/main/default/objects/ALK_Questionary_Answer__c/fields/ALK_Connected_Devices__c.field-meta.xml
<CustomField>
    <fullName>ALK_Connected_Devices__c</fullName>
    <formula>ALK_Work_Order__r.ALK_Connected_Devices__c</formula>
    <label>Se deja conectado a lo siguiente:</label>
    <type>Text</type>
</CustomField>