force-app/main/default/objects/ALK_Questionary_Answer__c/fields/ALK_Customer_Email__c.field-meta.xml
<CustomField>
    <fullName>ALK_Customer_Email__c</fullName>
    <formula>ALK_Work_Order__r.ALK_Email_Address__c</formula>
    <label>Correo Electrónico del Cliente</label>
    <type>Text</type>
</CustomField>