force-app/main/default/objects/ALK_Questionary_Answer__c/fields/ALK_Drain_Point__c.field-meta.xml
<CustomField>
    <fullName>ALK_Drain_Point__c</fullName>
    <formula>TEXT ( ALK_Work_Order__r.ALK_Drain_Point__c  )</formula>
    <label>Punto de desagüe en lugar de instalación</label>
    <type>Text</type>
</CustomField>