force-app/main/default/objects/ALK_Questionary_Answer__c/fields/ALK_Electricity_Near_Instalation__c.field-meta.xml
<CustomField>
    <fullName>ALK_Electricity_Near_Instalation__c</fullName>
    <formula>TEXT ( ALK_Work_Order__r.ALK_Electricity_Near_Instalation__c )</formula>
    <label>Punto eléctrico en local de instalación</label>
    <type>Text</type>
</CustomField>