force-app/main/default/objects/ALK_Questionary_Answer__c/fields/ALK_Gas_Near_Instalation__c.field-meta.xml
<CustomField>
    <fullName>ALK_Gas_Near_Instalation__c</fullName>
    <formula>TEXT ( ALK_Work_Order__r.ALK_Gas_Near_Instalation__c )</formula>
    <label>Punto a gas en el local de instalación</label>
    <type>Text</type>
</CustomField>