force-app/main/default/objects/ALK_Questionary_Answer__c/fields/ALK_Handler_Corresponds_Condenser__c.field-meta.xml
<CustomField>
    <fullName>ALK_Handler_Corresponds_Condenser__c</fullName>
    <formula>TEXT ( ALK_Work_Order__r.ALK_Handler_Corresponds_Condenser__c )</formula>
    <label>Manejadora corresponde con condensadora</label>
    <type>Text</type>
</CustomField>