force-app/main/default/objects/ALK_Questionary_Answer__c/fields/ALK_Height_Asked_by_Customer__c.field-meta.xml
<CustomField>
    <fullName>ALK_Height_Asked_by_Customer__c</fullName>
    <formula>ALK_Work_Order__r.ALK_Height_Asked_by_Customer__c</formula>
    <label>A petición del cliente se deja a altura</label>
    <type>Text</type>
</CustomField>