force-app/main/default/objects/ALK_Questionary_Answer__c/fields/ALK_Instalation_Kit__c.field-meta.xml
<CustomField>
    <fullName>ALK_Instalation_Kit__c</fullName>
    <formula>ALK_Work_Order__r.ALK_Instalation_Kit__c</formula>
    <label>KIT de Instalacion</label>
    <type>Text</type>
</CustomField>