force-app/main/default/objects/ALK_Questionary_Answer__c/fields/ALK_Perfect_Aesthetic_Condition__c.field-meta.xml
<CustomField>
    <fullName>ALK_Perfect_Aesthetic_Condition__c</fullName>
    <formula>TEXT ( ALK_Work_Order__r.ALK_Perfect_Aesthetic_Condition__c )</formula>
    <label>Producto en perfecto estado estetico</label>
    <type>Text</type>
</CustomField>