force-app/main/default/objects/ALK_Questionary_Answer__c/fields/ALK_Product_Assembled__c.field-meta.xml
<CustomField>
    <fullName>ALK_Product_Assembled__c</fullName>
    <formula>TEXT ( ALK_Work_Order__r.ALK_Product_Assembled__c )</formula>
    <label>Se entrega producto armado correctamente</label>
    <type>Text</type>
</CustomField>