force-app/main/default/objects/ALK_Questionary_Answer__c/fields/ALK_Product_Good_Condition__c.field-meta.xml
<CustomField>
    <fullName>ALK_Product_Good_Condition__c</fullName>
    <formula>TEXT( ALK_Work_Order__r.ALK_Product_Good_Condition__c )</formula>
    <label>Producto en buen estado</label>
    <type>Text</type>
</CustomField>