force-app/main/default/objects/ALK_Questionary_Answer__c/fields/ALK_Product_In_Place__c.field-meta.xml
<CustomField>
    <fullName>ALK_Product_In_Place__c</fullName>
    <formula>TEXT ( ALK_Work_Order__r.ALK_Product_In_Place__c )</formula>
    <label>Producto esta en el lugar de instalación</label>
    <type>Text</type>
</CustomField>