force-app/main/default/objects/ALK_Questionary_Answer__c/fields/ALK_Product_Level__c.field-meta.xml
<CustomField>
    <fullName>ALK_Product_Level__c</fullName>
    <formula>TEXT ( ALK_Work_Order__r.ALK_Product_Level__c )</formula>
    <label>Se entrega producto nivelado</label>
    <type>Text</type>
</CustomField>