force-app/main/default/objects/ALK_Questionary_Answer__c/fields/ALK_Product_Working_Properly__c.field-meta.xml
<CustomField>
    <fullName>ALK_Product_Working_Properly__c</fullName>
    <formula>TEXT ( ALK_Work_Order__r.ALK_Product_Working_Properly__c )</formula>
    <label>Producto funcionando correctamente</label>
    <type>Text</type>
</CustomField>