force-app/main/default/objects/ALK_Questionary_Answer__c/fields/ALK_Questionnaire_Type__c.field-meta.xml
<CustomField>
    <fullName>ALK_Questionnaire_Type__c</fullName>
    <label>Tipo de Cuestionario</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cuestionario de Inicio</fullName>
            </value>
            <value>
                <fullName>Cuestionario de Cierre</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>