force-app/main/default/objects/ALK_Questionary_Answer__c/fields/ALK_Send_Quote_Email__c.field-meta.xml
<CustomField>
    <fullName>ALK_Send_Quote_Email__c</fullName>
    <formula>ALK_Work_Order__r.ALK_Send_Quote_Email__c</formula>
    <label>Enviar cotizacion al correo electrónico</label>
    <type>Text</type>
</CustomField>