force-app/main/default/objects/ALK_Questionary_Answer__c/fields/ALK_Service_Conditions_Format__c.field-meta.xml
<CustomField>
    <fullName>ALK_Service_Conditions_Format__c</fullName>
    <formula>TEXT (  ALK_Work_Order__r.Formato_con_condiciones_del_servicio__c  )</formula>
    <label>Formato con condiciones del servicio</label>
    <type>Text</type>
</CustomField>