force-app/main/default/objects/ALK_Questionary_Answer__c/fields/ALK_Service_Conditions_Quote__c.field-meta.xml
<CustomField>
    <fullName>ALK_Service_Conditions_Quote__c</fullName>
    <formula>TEXT ( ALK_Work_Order__r.ALK_Service_Conditions_Quote__c )</formula>
    <label>Cond. del servicio y cotización enviada</label>
    <type>Text</type>
</CustomField>