force-app/main/default/objects/ALK_Questionary_Answer__c/fields/ALK_Work_Order__c.field-meta.xml
<CustomField>
    <fullName>ALK_Work_Order__c</fullName>
    <label>Orden de trabajo</label>
    <referenceTo>WorkOrder</referenceTo>
    <relationshipLabel>Respuestas de Cuestionarios</relationshipLabel>
    <relationshipName>Respuestas_de_Cuestionarios</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>