force-app/main/default/objects/ALK_Questionary_Answer__c/fields/ALK_Work_Type_Category__c.field-meta.xml
<CustomField>
    <fullName>ALK_Work_Type_Category__c</fullName>
    <formula>TEXT(ALK_Work_Order__r.WorkType.ALK_Work_Type_Category__c)</formula>
    <label>Categoría</label>
    <type>Text</type>
</CustomField>